<resources>
    <string name="app_name">Manga Reader</string>

    <string name="no_account">if you don\'t have account <b>Register here!</b> \n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favorite">favorite</string>
    <string name="upload">upload</string>
    <string name="setting">Setting</string>
    <string name="logout">logout</string>
    <string name="profile_name">profile name</string>
    <string name="conform_password">conform_password</string>
    <string name="log_in">log in</string>
    <string name="password">password</string>
    <string name="user_name">user_name</string>
    <string name="email">email</string>
    <string name="last_chapter">last chapter:</string>
    <string name="description">Description</string>
    <string name="manga_name">manga name</string>
    <string name="last_ch">last ch</string>
    <string name="the_story">the story</string>
    <string name="read">read</string>
    <string name="manga_title">manga title</string>
    <string name="most_popular_manga">most popular manga</string>
    <string name="change_photo">change photo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main_login" translatable="false">MainActivityLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="textview">the story</string>
    <string name="story">story..</string>
    <string name="comment">comment</string>
    <string name="to_read_last_ch">to read last Ch</string>
    <string name="are_you_sure">Are you sure !!</string>
    <string name="yes_i_m">yes I\'m</string>
    <string name="no_by_mistake">No,by mistake</string>
    <string name="done">Done!</string>
    <string name="select_img">select Img</string>
    <string name="what_do_you_think_about_this_maga">what do you think about this maga!!</string>
    <string name="cancel">cancel!</string>
    <string name="add">add</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="write_a_comment">write a comment</string>
    <string name="language">language</string>
    <string name="search">search</string>
    <string name="home">home</string>
    <string name="change_profile_photo">change profile photo</string>
    <string name="senstive_material">sorry you can\'t access this page!!cause it contain  sensitive material!</string>
    <string name="back_to_home">back to home!</string>
    <string name="rating">rating</string>
    <string name="status">status</string>
    <string name="unavailable">..unavailable..</string>
    <string name="last_update">last update</string>
    <string name="genres">genres</string>
    <string name="chapters">chapters</string>
    <string name="uploaded_file">uploaded file</string>
    <string name="upload_at">upload at</string>
    <string name="ch_title">ch_title</string>
    <string name="here_you_can_upload_your_translated_manga">here you can upload your translated manga.</string>
</resources>