<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

<item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_baseline_star_24"

            android:title="@string/favorite" />
        <item
            android:id="@+id/uploadMangaFragment"
            android:icon="@drawable/ic_baseline_backup_24"
            android:title="@string/upload" />
    </group>


    <group >
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />

    </group>
<item android:title="@string/logout">
    <menu>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout"

            />

    </menu>


</item>

</menu>



