<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signUpPage.SignPageFragment">


        <View
            android:id="@+id/ellipse_6"
            android:layout_width="441dp"
            android:layout_height="217dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="-30dp"
            android:background="@drawable/up_corn"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/ellipse_8"
            android:layout_width="201dp"
            android:layout_height="131dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="252dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_corn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txt" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="77dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="#D8C5C5"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/ellipse_8"
            app:layout_constraintTop_toTopOf="@+id/ellipse_8" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="179dp"
            android:layout_height="0dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="64dp"
            android:text="welcome"
            android:textAlignment="center"
            android:textColor="#FDF9F9"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_txt"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="317dp"
            android:layout_height="52dp"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="88dp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_toggle" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="46dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/login_btn"
            app:layout_constraintTop_toTopOf="@+id/ellipse_8"
            app:srcCompat="@drawable/arrow" />

        <EditText
            android:id="@+id/emil_txt"
            android:layout_width="334dp"
            android:layout_height="71dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="171dp"

            android:layout_marginBottom="23dp"
            android:background="@drawable/text_filed"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            app:layout_constraintBottom_toTopOf="@+id/password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ellipse_6"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_toggle"
            android:layout_width="336dp"
            android:layout_height="69dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="23dp"

            android:layout_marginEnd="35dp"
            android:background="@drawable/text_filed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emil_txt"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="338dp"
                android:layout_height="71dp"
                android:background="@drawable/text_filed"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>